# wipi

./: Cargo.toml  README.md  build_examples.sh
.github/workflows/: build_examples.yml  rust-audit.yaml  rust.yml
examples/: Cargo.toml  build.rs
examples/.cargo/: config.toml
examples/resources/resource/: test.txt
examples/src/: helloworld.rs  image.rs  input.rs  paint.rs  resource.rs  triangle.rs
host/: Cargo.toml
host/wipi_archiver/: Cargo.toml
host/wipi_archiver/src/: lib.rs  main.rs
host/wipi_build/: Cargo.toml
host/wipic_simulation/: Cargo.toml
host/wipic_simulation/src/: graphics.rs
host_crates/wipi_archiver/src/: main.rs
host_crates/wipi_build/src/: lib.rs
host_crates/wipic_simulation/: Cargo.toml
host_crates/wipic_simulation/src/: kernel.rs  lib.rs
src/: ktf.ld
src/ktf/: init.s
wipi/: Cargo.toml  build.rs
wipi/.cargo/: config.toml
wipi/src/: allocator.rs  app.rs  console.rs  database.rs  emulation.rs  event.rs  framebuffer.rs  image.rs  ktf.ld  ktf.rs  lgt.rs  lib.rs  lifecycle.rs  panic_handler.rs  resource.rs  sys.rs
wipi/src/emulation/: wipic.rs
wipi/src/ktf/: clet.rs  clet_card.rs  entry.s  globals.rs  init.s  java.rs  start.rs  wipic.rs
wipi/src/ktf/wipic/: graphics.rs  kernel.rs
wipi/src/lgt/: external.rs  globals.rs  start.rs  wipic.rs
wipi/src/lgt/wipic/: kernel.rs
wipi_archiver/: Cargo.toml
wipi_archiver/src/: lgt_elf.rs  lib.rs  main.rs
wipi_boot/: Cargo.toml  build.rs
wipi_boot/src/: ktf.rs  lgt.rs  lib.rs  simulation.rs
wipi_boot/src/ktf/: clet_card.rs  entry.s  globals.rs  java.rs  ktf.ld  start.rs
wipi_boot/src/lgt/: globals.rs  start.rs
wipi_build/src/: lib.rs
wipi_macros/: Cargo.toml
wipi_macros/src/: lib.rs
wipi_types/: Cargo.toml
wipi_types/src/: ktf.rs  lgt.rs  lib.rs  wipic.rs
wipi_types/src/ktf/: java.rs  kernel.rs  wipic.rs
wipi_types/src/lgt/: java.rs  wipic.rs
wipic_simulation/: Cargo.toml
wipic_simulation/src/: database.rs  graphics.rs  kernel.rs  lib.rs
wipic_sys/: Cargo.toml
wipic_sys/src/: ktf.rs  lgt.rs  lib.rs  simulation.rs
wipic_sys/src/ktf/: database.rs  graphics.rs  kernel.rs
wipic_sys/src/lgt/: database.rs  graphics.rs  kernel.rs
wipic_sys/src/simulation/: database.rs  graphics.rs  kernel.rs
