[workspace]
resolver = "3"

members = ["examples", "wipi", "wipi_boot", "wipi_macros", "wipi_types", "wipic_sys"]
exclude = ["host_crates"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
cfg-if = { version = "^1.0", default-features = false }

wipi = { path = "wipi" }
wipi_boot = { path = "wipi_boot" }
wipi_macros = { path = "wipi_macros" }
wipi_types = { path = "wipi_types" }
wipic_sys = { path = "wipic_sys" }

wipi_build = { path = "host_crates/wipi_build" }
wipic_simulation = { path = "host_crates/wipic_simulation" }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.examples]
inherits = "dev"
debug = false
