[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["simulation"]
ktf = ["wipi/ktf"]
lgt = ["wipi/lgt"]
simulation = ["wipi/simulation"]

[dependencies]
wipi = { path = "../wipi" }

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "paint"
path = "src/paint.rs"
