[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["simulation"]
ktf = ["wipi/ktf", "wipi_build/ktf"]
lgt = ["wipi/lgt", "wipi_build/lgt"]
simulation = ["wipi/simulation"]

[dependencies]
wipi = { path = "../wipi" }

[build-dependencies]
wipi_build = { path = "../host/wipi_build" }

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "paint"
path = "src/paint.rs"
