[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["simulation"]
ktf = ["wipi/ktf", "wipi_build/ktf"]
lgt = ["wipi/lgt", "wipi_build/lgt"]
simulation = ["wipi/simulation"]

[dependencies]
wipi = { workspace = true }

[build-dependencies]
wipi_build = { workspace = true }

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "paint"
path = "src/paint.rs"

[[bin]]
name = "input"
path = "src/input.rs"
