[package]
name = "wipi"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["simulation"]
ktf = ["wipi_types/ktf", "wipi_boot/ktf", "wipic_sys/ktf"]
lgt = ["wipi_types/lgt", "wipi_boot/lgt", "wipic_sys/lgt"]
simulation = ["wipi_types", "wipic_sys/simulation"]

[dependencies]
wipi_boot = { path = "../wipi_boot", optional = true }
wipi_types = { path = "../wipi_types", optional = true }
wipic_sys = { path = "../wipic_sys" }
