[package]
name = "wipi"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ktf = ["wipi_types/ktf", "wipi_boot/ktf", "wipic_sys/ktf"]
lgt = ["wipi_types/lgt", "wipi_boot/lgt", "wipic_sys/lgt"]
simulation = ["wipi_types", "wipic_sys/simulation"]

[dependencies]
wipi_boot = { workspace = true, optional = true }
wipi_macros = { workspace = true }
wipi_types = { workspace = true, optional = true }
wipic_sys = { workspace = true }
