[package]
name = "wipi_boot"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ktf = ["wipi_types/ktf"]
lgt = ["wipi_types/lgt"]
simulation = ["wipi_types", "wipic_simulation"]

[dependencies]
cfg-if = { workspace = true }

wipi_types = { workspace = true, optional = true }
wipic_simulation = { workspace = true, optional = true }
