[package]
name = "wipic_sys"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ktf = ["wipi_types/ktf", "wipi_boot/ktf"]
lgt = ["wipi_types/lgt", "wipi_boot/lgt"]
simulation = ["wipi_types", "wipi_boot", "wipic_simulation"]

[dependencies]
cfg-if = { workspace = true }

wipi_boot = { path = "../wipi_boot", optional = true }
wipi_types = { path = "../wipi_types", optional = true }
wipic_simulation = { path = "../host/wipic_simulation", optional = true }
