[package]
name = "wipic_sys"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ktf = ["wipi_types/ktf", "wipi_boot/ktf"]
lgt = ["wipi_types/lgt", "wipi_boot/lgt"]
simulation = ["wipi_types", "wipi_boot/simulation", "wipic_simulation"]

[dependencies]
cfg-if = { workspace = true }

wipi_boot = { workspace = true, optional = true }
wipi_types = { workspace = true, optional = true }
wipic_simulation = { workspace = true, optional = true }
