[package]
name = "wipi_archiver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^1.0" }
clap = { version = "^4.5", features = ["derive"] }
zip = { version = "^4.2" }

[dev-dependencies]
object = { version = "^0.37", features = ["read", "write"] }
